Updated favicon, added reservation rules to home pg, Google security verification index.html

--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <link
     href="https://fonts.googleapis.com/css?family=Open Sans"
     rel="stylesheet"
   />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <!-- Google site verification -->
+    <meta name="google-site-verification" content="hotnTlfvVPNyyhIBEICQI5GJxgK7I7b2NckPkSJ8wyU" />
+
     <meta
       name="description"
-      content="Ada Room Reservation Website."
+      content="Room reservation website for Ada Developers Academy - Seattle Campus."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -29,7 +32,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Ada Room Reservation</title>
-    <!-- update the version number as needed -->
+
+    <!-- Firebase scripts. Update the version number as needed -->
     <script defer src="/__/firebase/9.9.1/firebase-app-compat.js"></script>
     <!-- include only the Firebase features as you need -->
     <script defer src="/__/firebase/9.9.1/firebase-auth-compat.js"></script>
