--- a/public/index.html
+++ b/public/index.html
@@ -34,19 +34,19 @@
     <title>Ada Room Reservation</title>
 
     <!-- Firebase scripts. Update the version number as needed -->
-    <script defer src="/__/firebase/9.9.1/firebase-app-compat.js"></script>
+    <!-- <script defer src="/__/firebase/9.9.1/firebase-app-compat.js"></script> -->
     <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/9.9.1/firebase-auth-compat.js"></script>
-    <script defer src="/__/firebase/9.9.1/firebase-database-compat.js"></script>
-    <script defer src="/__/firebase/9.9.1/firebase-firestore-compat.js"></script>
-    <script defer src="/__/firebase/9.9.1/firebase-messaging-compat.js"></script>
-    <script defer src="/__/firebase/9.9.1/firebase-remote-config-compat.js"></script>
-    <script defer src="/__/firebase/9.9.1/firebase-performance-compat.js"></script>
+    <!-- <script defer src="/__/firebase/9.9.1/firebase-auth-compat.js"></script> -->
+    <!-- <script defer src="/__/firebase/9.9.1/firebase-database-compat.js"></script> -->
+    <!-- <script defer src="/__/firebase/9.9.1/firebase-firestore-compat.js"></script> -->
+    <!-- <script defer src="/__/firebase/9.9.1/firebase-messaging-compat.js"></script> -->
+    <!-- <script defer src="/__/firebase/9.9.1/firebase-remote-config-compat.js"></script> -->
+    <!-- <script defer src="/__/firebase/9.9.1/firebase-performance-compat.js"></script> -->
     <!-- 
       initialize the SDK after all desired features are loaded, set useEmulator to false
       to avoid connecting the SDK to running emulators.
     -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+    <!-- <script defer src="/__/firebase/init.js?useEmulator=false"></script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -62,7 +62,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <script>
+    <!-- <script>
       document.addEventListener('DOMContentLoaded', function() {
         const loadEl = document.querySelector('#load');
         // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
@@ -99,6 +99,6 @@
           loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
         }
       });
-    </script>
+    </script> -->
   </body>
 </html>
