--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,13 @@
     href="https://fonts.googleapis.com/css?family=Open Sans"
     rel="stylesheet"
   />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="theme-color" content="#000000" />
 
     <!-- Google site verification -->
@@ -50,6 +56,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!--JavaScript at end of body for optimized loading-->
+    <script type="text/javascript" src="js/materialize.min.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
