--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-    <link
-    href="https://fonts.googleapis.com/css?family=Open Sans"
-    rel="stylesheet"
-  />
+    <link href="https://fonts.googleapis.com/css?family=Open Sans" rel="stylesheet"/>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -19,10 +16,7 @@
     <!-- Google site verification -->
     <meta name="google-site-verification" content="hotnTlfvVPNyyhIBEICQI5GJxgK7I7b2NckPkSJ8wyU" />
 
-    <meta
-      name="description"
-      content="Room reservation website for Ada Developers Academy - Seattle Campus."
-    />
+    <meta name="description" content="Room reservation website for Ada Developers Academy - Seattle Campus."/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -56,8 +50,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="js/materialize.min.js"></script>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
